--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
     "name": "overthinking-theme",
-    "displayName": "overthinking-theme",
+    "displayName": "overthinking theme",
     "description": "color theme",
     "version": "0.0.1",
+    "publisher": "scivarolo",
+    "author": "Sebastian Civarolo",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/scivarolo/overthinking-vscode-theme"
+    },
+    "bugs": {
+		"url": "https://github.com/equinusocio/vsc-material-theme/issues"
+	},
     "engines": {
         "vscode": "^1.30.0"
     },
